--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_view_event.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_view_event.xml
@@ -12,8 +12,15 @@
         android:textStyle="bold"
         android:text="An Event"
         android:textSize="@dimen/event_title_size"
-        android:layout_gravity="center"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+        android:layout_gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/feed_name"
+        android:text="feedname"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/light_grey"
+        android:layout_gravity="center"/>
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,9 +76,14 @@
         android:textColor="@color/multi_day"
         android:visibility="invisible"
         android:layout_gravity="center"/>
-    <TextView  android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/single_event_location"/>
+        android:orientation="vertical"
+        android:id="@+id/tags"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -82,17 +94,11 @@
             android:id="@+id/single_event_original_post"
             android:text="@string/lorem_ipsum"/>
     </ScrollView>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/feed_name"
-        android:text="feedname"
-        android:textColor="@color/light_grey"
-        android:layout_gravity="center"/>
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/view_original_post"
         android:id="@+id/single_event_url"
         android:layout_gravity="center"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
     </LinearLayout>
