--- a/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="create_account_password_margin">20dp</dimen>
     <dimen name="event_title_size">27sp</dimen>
-    <dimen name="radio_button_size">20sp</dimen>
+    <dimen name="radio_button_size">17sp</dimen>
     <dimen name="calendar_feed_date_container_size">16sp</dimen>
     <dimen name="event_feed_title_size">18sp</dimen>
     <dimen name="event_feed_month_size">12dp</dimen>
@@ -36,4 +36,13 @@
     <dimen name="grape_margin_top">7dp</dimen>
     <dimen name="create_account_title">20sp</dimen>
     <dimen name="create_account_text_size">16sp</dimen>
+    <dimen name="upcoming_size">20dp</dimen>
+    <dimen name="upcoming_bottom_margin">4dp</dimen>
+
+    <dimen name="logo_height">40dp</dimen>
+    <dimen name="logo_width">150dp</dimen>
+    <dimen name="margin_top_title">3dp</dimen>
+    <dimen name="loading_message_size">16sp</dimen>
+    <dimen name="med_grapes_height">50dp</dimen>
+    <dimen name="med_grapes_width">25dp</dimen>
 </resources>
