--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -845,13 +845,40 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You have no feeds! Add a feed by entering the end of the link to the Facebook page or Twitter account you want to follow." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swo-YW-h4i">
-                                                    <rect key="frame" x="8" y="8" width="584" height="56"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swo-YW-h4i">
+                                                    <rect key="frame" x="8" y="8" width="584" height="82"/>
+                                                    <string key="text">You have no feeds! Add a feed by entering the end of the link to the Facebook page or Twitter account you want to follow. For example, in the links below, you would enter the highlighted text and then select either Facebook or Twitter</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fblink" translatesAutoresizingMaskIntoConstraints="NO" id="pCs-Fn-fOT">
+                                                    <rect key="frame" x="52" y="98" width="497" height="41"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="41" id="QUn-8u-jRM"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="twitterlink" translatesAutoresizingMaskIntoConstraints="NO" id="7xj-F0-VA5">
+                                                    <rect key="frame" x="52" y="147" width="497" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="34" id="Frf-yZ-hEx"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="swo-YW-h4i" firstAttribute="top" secondItem="yn2-l7-CAu" secondAttribute="topMargin" id="AtX-f2-aRf"/>
+                                                <constraint firstItem="pCs-Fn-fOT" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="GEc-SD-LrK"/>
+                                                <constraint firstItem="pCs-Fn-fOT" firstAttribute="top" secondItem="swo-YW-h4i" secondAttribute="bottom" constant="8" id="IIn-y4-uzO"/>
+                                                <constraint firstItem="7xj-F0-VA5" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" constant="44" id="QTR-uN-SCY"/>
+                                                <constraint firstItem="swo-YW-h4i" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" id="SAT-wK-6up"/>
+                                                <constraint firstItem="pCs-Fn-fOT" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" constant="44" id="Vw9-bx-gLX"/>
+                                                <constraint firstItem="swo-YW-h4i" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="cbJ-mX-Qfc"/>
+                                                <constraint firstItem="7xj-F0-VA5" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="hwK-yN-RD2"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="pCs-Fn-fOT" secondAttribute="trailing" constant="43" id="lA1-No-aYg"/>
+                                                <constraint firstItem="7xj-F0-VA5" firstAttribute="top" secondItem="pCs-Fn-fOT" secondAttribute="bottom" constant="8" id="muN-Xu-bmD"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="7xj-F0-VA5" secondAttribute="trailing" constant="43" id="wZJ-hd-Y2V"/>
+                                                <constraint firstItem="swo-YW-h4i" firstAttribute="trailing" secondItem="yn2-l7-CAu" secondAttribute="trailingMargin" id="yZM-Wd-hN7"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -1018,6 +1045,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fblink" width="296" height="35"/>
         <image name="glyphicons-115-list" width="24" height="21"/>
         <image name="glyphicons-137-cogwheel" width="24" height="24"/>
         <image name="glyphicons-46-calendar" width="23" height="24"/>
@@ -1026,6 +1054,7 @@
         <image name="grapevineNew" width="521" height="522"/>
         <image name="purple-round-1" width="548" height="560"/>
         <image name="swag-grape" width="157" height="290"/>
+        <image name="twitterlink" width="234" height="29"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="mco-2s-tLG"/>
